Fixed search, rotating on mobile, breaks between minicards, and if the search terms end in a space it deletes the space.

--- a/public/stylesheets/table.css
+++ b/public/stylesheets/table.css
@@ -102,12 +102,13 @@ a {
     flex: 100%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .test2{
         font-size: 10px;
     }
     .miniCard {
         display: block;
+        margin-bottom: 20px;
     }
     .table {
         display: none;
